syntax = "proto3";

package yasir2000.go-grpc-1;

option go_package = ".;pb";
option java_package = "com.gitlab.yasir2000.go-grpc-1.pb";
option java_multiple_files = true;


message CPU{
    string brand =1;
    string mame = 2;
    uint32 number_cores =3;
    uint32 number_threads =4;
    double min_ghz =5;
    double max_ghz=6;
}

message GPU{
    string brand =1;
    string mame = 2; 
    double min_ghz =3;
    double max_ghz=4;
    Memory memory=5;
}